         roms.c,select.c,text.c}: some notebooks wire the "standard" return
         key to the same keysym as enter on the number pad, so treat the two
         equivalently (thanks, Marce) (Fred).
20091215 Makefile.am,display.c,rectangle.[ch]: extract dirty rectangle handling
         to its own files (Fred).
20091215 man/fuse.1: fix typo (Fred).
20091216 configure.in: add a '--without-png' option for Gentoo (patch #2915091)
         (José Manuel Ferrer Ortiz).
20091227 fuse.c,input.c,menu.c,ui.c,ui/fb/{fbkeyboard.c,fbui.c},
         ui/sdl/{sdldisplay.c,sdlkeyboard.c,sdlui.c},
         ui/svga/{svgadisplay.c,svgakeyboard.c,svgaui.c},
         ui/ui.h,ui/widget/widget.[ch],ui/wii/{wiikeyboard.c,wiiui.c},
         ui/xlib/{xdisplay.c,xerror.c,xkeyboard.c,xui.c}: move widget UI hooks
         to the UI code, remove unnecessary #ifdef WIDGET_UI (patch #2918210)
         (Gergely Szasz).
20091230 ui.c: include widget.h for widget_init and widget_end definitions (more
         from patch #2918210) (Gergely Szasz).
20100107 ui.c: supply dummy ui_widget_init and ui_widget_end definitions (more
         from patch #2918210) (Gergely Szasz).
20100107 Makefile.am,configure.in,sound.[c|cpp],
         sound/{Blip_Buffer.[cpp|h],Makefile.am,blipbuffer.[ch]}: convert
         Blip_Buffer to plain C (patch #2922796) (Gergely Szasz).
20100116 disk/{disk.[ch],fdd.[ch],upd_fdc.[ch]},machines/specplus3.[ch],
         man/fuse.1,periph.c,settings.dat,ui/options.dat: add weak data handling
         capability so Fuse can deal with weak data if it present in the disk
         image (EDSK/UDI) (patch #2927624) (Gergely Szasz).
20100215 ui/gtk/gtkkeyboard.c: account for group setting on key events to make
         intertional keyboards work based on key positions rather than default
         symbol (patch #2951275) (Michal Jurica).
20100302 ui/gtk/gtkui.c: implement drag and drop support (patch #2961519)
         (Dmitry Semyonov).