@@ -3281,3 +3281,4 @@
          symbol (patch #2951275) (Michal Jurica).
 20100302 ui/gtk/gtkui.c: implement drag and drop support (patch #2961519)
          (Dmitry Semyonov).
+20100506 debugger/{command.c,debugger_internals.h},ula.c: fix gcc 4.4 warnings.
